# intellij-auto-import-does-not-include-source-root

./: .dockerignore  README.md  pyproject.toml  tox.ini
app/: __init__.py  main.py
app/lib/: hello.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yaml  entrypoint.sh
tests/lib/: test_hello.py
